--- a/cadastro.html
+++ b/cadastro.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafezin</title>
+    <title>Frutaria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/cadastro.css">
-    <link rel="shortcut icon" href="assets/frutas.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/cadastro.css">
+    <link rel="shortcut icon" href="assets/imagem/frutas.png" type="image/x-icon">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/frutas.png" alt="Logo" width="30" height="24"
+                    <img src="assets/imagem/frutas.png" alt="Logo" width="30" height="24"
                         class="d-inline-block align-text-top">
                     Frutaria
                 </a>
@@ -39,19 +39,12 @@
     </header>
 
     <main>
-        <!-- Label -->
-        <div class="labell">
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingInput" placeholder="">
-                <label for="floatingInput">Buscar</label>
-            </div>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                id="btnmodal">
-                +
-            </button>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+            id="btnmodal">
+            +
+        </button>
         </div>
-
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -94,21 +87,10 @@
                 </div>
             </div>
         </div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Identificador</th>
-                    <th scope="col">Nome popular</th>
-                    <th scope="col">Nome cientifico</th>
-                    <th scope="col">Produção média</th>
-                    <th scope="col">Data do plantio</th>
-
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-
+        <div class="container mt-2">
+            <div class="row" id="cartoesfrutas">
+            </div>
+        </div>
     </main>
 
 
@@ -116,7 +98,7 @@
         <p>&copy; 2025 Frutaria. Todos os direitos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/cadastro.js"></script>
+    <script src="./src/cadastro.js"></script>
 </body>
 
 </html>
