--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Cafezin </title>
+    <title>Frutaria </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/index.css">
-    <link rel="shortcut icon" href="assets/frutas.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="shortcut icon" href="assets/imagem/frutas.png" type="image/x-icon">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/frutas.png" alt="Logo" width="30" height="24"
+                    <img src="assets/imagem/frutas.png" alt="Logo" width="30" height="24"
                         class="d-inline-block align-text-top">
                     Frutaria
                 </a>
@@ -51,13 +51,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/abacaxi.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/imagem/abacaxi.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/acerola.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/imagem/acerola.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/banana.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/imagem/banana.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -71,45 +71,6 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <!-- cards -->
-        <div class="container">
-            <div class="card" style="width: 18rem;">
-                <img src="assets/abacaxi.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Abacaxi</h5>
-                    <p class="card-text">Ananas comosus.
-                    </p>
-                    <div class="valor">
-                        <a href="#" class="btn btn-primary">Ver mais</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="assets/acerola.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Acerola</h5>
-                    <p class="card-text">Malpighia emarginata.</p>
-                    <div class="valor">
-                        <a href="#" class="btn btn-primary">Ver mais</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="assets/banana.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Banana</h5>
-                    <p class="card-text">Musa.</p>
-                    <div class="valor">
-                        <a href="#" class="btn btn-primary">Ver mais</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container mt-2">
-            <div class="row" id="cartoesfrutas">
-            </div>
-        </div>
-
     </main>
     <footer>
         <div class="col mb-3 divFooter">
